@@ -1,8 +1,8 @@
 # ----- 信息 -----
-# @filename start.sh
+# @filename soft-start.sh
 # @version 1.0
 # @author qianye.zheng
-# @description  启动脚本
+# @description  自身脚本启动
 
 # 解决远程ssh执行脚本失败问题
 source /etc/profile
@@ -11,53 +11,21 @@ source /etc/profile
 cd `dirname $0`
 
 # 变量定义
-# 应用名称
+# 应用名称，名称只是作为显示而存在，与进程查找并无关系
 declare -r APP_NAME=""
-declare -r APP_VERSION="1.0"
-# (Jar包)文件名
-declare -r FILE_NAME="${APP_NAME}-${APP_VERSION}.jar"
-# 应用路径
-declare -r HOME_PATH="/usr/local/${APP_NAME}"
-# 日志路径
-declare -r LOG_PATH="/data/logs/${APP_NAME}"
-# 应用端口
-declare -r APP_PORT=7070
-# 程序参数
-declare -r PROGRAM_OPTS=""
 # 启动命令
-declare -r RUN_JAVA='java'
+declare -r STARTUP_CMD=""
 # 进程ID文件，启动多个进程则用不同的pid文件
 PID_FILE="process.pid"
 # 检查次数
 CHECK_COUNT=3
 
 # 创建目录
-mkdir -p ${HOME_PATH}
-mkdir -p ${LOG_PATH}
+#mkdir -p ${HOME_PATH}
+#mkdir -p ${LOG_PATH}
 
 # 进入应用所在目录（虽然都是绝对路径，但有些应用需要进入应用目录才能启动成功）
-cd ${HOME_PATH}
-
-# JVM 参数配置，-Xms最小内存，-Xmx最大内存
-JAVA_OPTS="-Xms256m -Xmx512m \
--XX:MetaspaceSize=128m \
--XX:MaxMetaspaceSize=128m \
--Xss768k \
--Xmn256m \
--XX:+AggressiveOpts \
--XX:+UseBiasedLocking \
--XX:+CMSParallelRemarkEnabled \
--XX:+UseConcMarkSweepGC \
--XX:ParallelGCThreads=2 \
--XX:SurvivorRatio=4 \
--XX:TargetSurvivorRatio=80 \
--verbose:gc \
--XX:+PrintGCDetails \
--XX:+PrintGCDateStamps \
--XX:+PrintHeapAtGC \
--Xloggc:$LOG_PATH/gc.log \
--XX:+HeapDumpOnOutOfMemoryError \
--XX:HeapDumpPath=$LOG_PATH/dump.logs"
+#cd ${HOME_PATH}
 
 # 进程状态标识变量，0-不存在, 1-存在
 PID_FLAG=0
@@ -93,10 +61,13 @@ start() {
   else
     echo "starting ${APP_NAME} ..."
     rm -f ${PID_FILE}
-     nohup ${RUN_JAVA} ${JAVA_OPTS} -Dserver.port=${APP_PORT} -jar ${HOME_PATH}/${FILE_NAME} ${PROGRAM_OPTS} > /dev/null 2>&1 &
+	# 调用其他脚本
+     nohup ${STARTUP_CMD} > /dev/null 2>&1 &
 	 # 将当前原生命令的执行的进程ID写入文件，调用其他脚本则无需写，一般目标脚本都会生成进程ID文件
-    echo $! > ${PID_FILE}
-    echo "${APP_NAME} has started, PID is $!."
+     echo $! > ${PID_FILE}
+	 # 读取目标进程ID文件
+	 PID=`cat "${PID_FILE}" | awk '{print $1}'`
+    echo "${APP_NAME} has started, PID is ${PID}."
   fi
 }
 
@@ -108,7 +79,7 @@ stop() {
     # 循环检查进程多次，每次睡眠等待2秒
     for((i=1;i<=${CHECK_COUNT};i++))
       do
-        kill ${PID}
+        kill ${PID} # 或者执行该软件的停止脚本，若没有则通过kill方式关闭
 	    sleep 2
 	    # 检查进程状态
 	    check_pid
